remove border from input[type='submit'], fix error text style and remove collapse menu glitch

--- a/src/ContactUs/Contact.scss
+++ b/src/ContactUs/Contact.scss
@@ -54,6 +54,7 @@
         margin-right: 5rem;
         h3 {
           font-size: 1.5rem;
+          padding-bottom: 1.5rem;
         }
       }
       form {
@@ -62,11 +63,11 @@
           display: grid;
           grid-template-columns: repeat(2, 1fr);
           grid-gap: 1rem;
-
           input {
             padding-left: 1rem;
             width: 100%;
             height: 2.815rem;
+            margin-bottom: 0.3rem;
           }
           p {
             font-weight: bold;
@@ -157,6 +158,7 @@
         height: 50px;
         font-size: 0.9rem;
         font-weight: bold;
+        border: none;
       }
     }
   }
@@ -239,6 +241,12 @@
   user-select: none;
 }
 .contact_form_checkbox_field {
+  &.checkbox_error {
+    color: red;
+    .checkmark {
+      border: 1px solid crimson;
+    }
+  }
   input {
     position: absolute;
     opacity: 0;
@@ -389,6 +397,15 @@
 
 @media only screen and (max-width: 400px) {
   #contact {
+    .contact_inner {
+      .contact_from_wraper {
+        form {
+          input[type="submit"] {
+            width: 100%;
+          }
+        }
+      }
+    }
     .contact {
       padding-top: 100px !important;
       padding: 0 1rem;
